<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Registro"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nombre"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldApellidos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/apellidos"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/e_mail"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:startIconDrawable="@android:drawable/ic_dialog_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldContrasena"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/contrasena"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldFechaNacimiento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Fecha nacimiento"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:startIconDrawable="@android:drawable/ic_menu_my_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRegistrarse"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:text="Registrarse"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#36DFE4"/>

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>